refactor: ReservationView 추가 및 예약/예약 대기 중복 생성 검증 개선